1999-03-27  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/brush_select.c
	* app/channels_dialog.c
	* app/color_select.c
	* app/devices.c
	* app/file_new_dialog.c
	* app/gradient_select.c
	* app/palette_select.c
	* app/pattern_select.c: applied a patch from Marco Lamberto
	<lm@geocities.com> which unifies actionareas ("Cancel" rightmost
	and default). Did the same in some more dialogs.

	* libgimp/gimpfileselection.c
	* libgimp/gimppatheditor.c
	* app/preferences_dialog.[ch]: completely reworked the preferences
	dialog:

	- select the notebook's pages with a tree.
	- reordered the categories. Please give me feedback, this really
	  needs to be intuitive.
	- removed lots of unused #include's.
	- turned the prefs. dialog into a test site for new convenience
	  constructors. These changes are however not visible. Flame me
	  until they're perfect ;) When finished, this stuff can save
	  *many* lines of gtk+ code.

	* modules/colorsel_gtk.c: made it circular.

1999-03-25  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* unitrc: corrected a typo

	* app/commands.c
	* app/global_edit.c
	* app/gradient.c
	* app/interface.[ch]
	* app/palette.c
	* app/paths_dialog.c: the query_[string|..]_boxes connect their
	close callback to a user provided signal now.

	* libgimp/gimpimage.c: gimp_image_get_unit() doesn't need a
	g_return_if_fail()

	* libgimp/gimpunitmenu.c: memory leak & compiler warning

	* configure.in
	* gimprc.in
	* user_install
	* user_install.bat
	* plug-ins/Makefile.am
	* plug-ins/FractalExplorer/*: added the FractalExplorer plugin.

	* app/install.c: ditto and made the install help text more
	editable by moving it to an array.

Thu Mar 25 22:44:36 GMT 1999 Andy Thomas <alt@gimp.org>

	Ok. I'll add the file this time..

Thu Mar 25 22:40:36 GMT 1999 Andy Thomas <alt@gimp.org>

	The paths .pdb stub for Yosh to look at.

1999-03-25  Jay Cox  <jaycox@earthlink.net>

	* app/paint_funcs.[ch]: Added an edge_lock parameter to